--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
 <div id="fb-root"></div>
+<script src="https://gumroad.com/js/gumroad.js"></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-153205738-3"></script>
 <script>
